chore: scrollbar x display fixed

--- a/src/components/productList/index.css
+++ b/src/components/productList/index.css
@@ -8,6 +8,7 @@
   overflow-x: scroll;
 }
 
-::-webkit-scrollbar {
+/* body::-webkit-scrollbar {
   display: none;
 }
+ */
